force-app/main/default/objects/Account/fields/AddressDiscrepancy__c.field-meta.xml
<CustomField>
    <fullName>AddressDiscrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Discrepancy</label>
    <type>Checkbox</type>
</CustomField>