force-app/main/default/objects/Account/fields/AlternativeAddress__c.field-meta.xml
<CustomField>
    <fullName>AlternativeAddress__c</fullName>
    <label>Alternative Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>