force-app/main/default/objects/Account/fields/AlternativeCity__c.field-meta.xml
<CustomField>
    <fullName>AlternativeCity__c</fullName>
    <label>Alternative City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>