force-app/main/default/objects/Account/fields/AlternativePostalCode__c.field-meta.xml
<CustomField>
    <fullName>AlternativePostalCode__c</fullName>
    <label>Alternative Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>