force-app/main/default/objects/Account/fields/AlternativeState__c.field-meta.xml
<CustomField>
    <fullName>AlternativeState__c</fullName>
    <label>Alternative State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>